# retail-backend

./: .env.example  .gitignore  Procfile  conftest.py  next-plan.md  nixpacks.toml  pyproject.toml  railway.toml
apps/accounts/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/accounts/tests/: test_auth_flow.py
apps/audit/: admin.py  middleware.py  models.py  recorder.py  serializers.py  urls.py  views.py
apps/audit/migrations/: 0001_initial.py  0002_immutability_trigger.py
apps/core/: middleware.py  models.py  permissions.py  validators.py  viewsets.py
apps/documents/: admin.py  models.py  serializers.py  urls.py  views.py
apps/documents/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
apps/documents/tests/: test_documents.py
apps/products/: admin.py  models.py  mxik_seed.py  serializers.py  urls.py  views.py
apps/products/migrations/: 0001_initial.py
apps/products/tests/: test_products.py
apps/supplier_portal/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/supplier_portal/migrations/: 0001_initial.py
apps/supplier_portal/tests/: test_supplier_flow.py
apps/suppliers/: admin.py  models.py  serializers.py  urls.py  views.py
apps/suppliers/migrations/: 0001_initial.py
apps/suppliers/tests/: test_suppliers.py
apps/tenants/: admin.py  models.py  serializers.py  urls.py  views.py
apps/tenants/migrations/: 0001_initial.py
config/: celery.py  urls.py
config/settings/: base.py  dev.py  prod.py
scripts/: smoke.sh  start-web.sh
(+1 files in other folders)
