[project]
name = "retailflow-backend"
version = "0.1.0"
description = "RetailFlow AI — Django backend"
requires-python = ">=3.12"
dependencies = [
  "django>=5.1,<5.3",
  "djangorestframework>=3.15",
  "djangorestframework-simplejwt>=5.3",
  "django-cors-headers>=4.4",
  "django-filter>=24.3",
  "drf-spectacular>=0.27",
  "django-environ>=0.11",
  "psycopg[binary]>=3.2",
  "pgvector>=0.3",
  "redis>=5.0",
  "celery>=5.4",
  "django-celery-beat>=2.7",
  "django-storages[s3]>=1.14",
  "pillow>=10.4",
  "httpx>=0.27",
  "openai>=1.40",
  "pydantic>=2.8",
  "sentry-sdk>=2.14",
]

[dependency-groups]
dev = [
  "ruff>=0.6",
  "pytest>=8.3",
  "pytest-django>=4.9",
  "pytest-cov>=5.0",
  "factory-boy>=3.3",
  "freezegun>=1.5",
  "django-extensions>=3.2",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "DJ"]
ignore = ["E501"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.dev"
python_files = ["test_*.py", "tests.py"]
addopts = "-ra --strict-markers"
